Margin bleeds on contact page corrected. Paddings on Blog & About Pages corrected. Nolayout added for PHP template

--- a/source/css/_page_blog.sass
+++ b/source/css/_page_blog.sass
@@ -1,5 +1,7 @@
 body.blog
 
+	.content
+		padding: 0 10px
 	h2.header
 		text-align: center
 		color: #006a67
