--- a/source/css/_structure.sass
+++ b/source/css/_structure.sass
@@ -10,6 +10,7 @@ body
 	position: relative
 	+box-shadow ( 0 3px 12px 0 rgba(black, .3) )
 	margin-top: -2px
+	margin-bottom: 20px
 
 // Push content under the header
 %headerpush:before
